Fix duplicate background color declaration in .wrap class

--- a/template/style.css
+++ b/template/style.css
@@ -3,6 +3,7 @@
     padding: 25px; 
     text-align: center; 
     box-shadow: 0 4px 25px -4px #9da5ab; 
+    background-color: gray;
 }
 article { 
     padding: 25px 0; 
